<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_checkin"
        android:enabled="true"
        android:title="@string/nav_checkin"
        android:icon="@drawable/ic_add_location_white_48dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_feed"
        android:enabled="true"
        android:title="@string/nav_feed"
        android:icon="@drawable/ic_rss_feed_white_48dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:title="@string/nav_profile"
        android:icon="@drawable/ic_person_white_48dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_map"
        android:enabled="true"
        android:title="@string/nav_map"
        android:icon="@drawable/ic_map_white_48dp"
        app:showAsAction="ifRoom" />
</menu>