<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.shreyas208.databass.ui.ProfileFragment">

    <TextView
        android:id="@+id/profile_tv_display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/profile_view_spacing"
        android:layout_marginRight="@dimen/profile_view_spacing"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textSize="32sp"
        android:textColor="@color/colorPrimaryDark"
        tools:text="Display Name"/>

    <TextView
        android:id="@+id/profile_tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/profile_view_spacing"
        android:layout_marginRight="@dimen/profile_view_spacing"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/darkGray"
        tools:text="username"/>

    <TextView
        android:id="@+id/profile_tv_join_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/profile_view_spacing"
        android:layout_marginRight="@dimen/profile_view_spacing"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/darkGray"
        tools:text="Joined Nov 16, 2017"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/profile_tv_checkin_count"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/ProfileCountText"
                tools:text="23"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/ProfileCountLabelText"
                android:text="@string/profile_tv_checkin_count_label"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/profile_tv_follower_count"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/ProfileCountText"
                tools:text="15"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/ProfileCountLabelText"
                android:text="@string/profile_tv_follower_count_label"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/profile_tv_following_count"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/ProfileCountText"
                tools:text="8"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/ProfileCountLabelText"
                android:text="@string/profile_tv_following_count_label"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/profile_tv_score"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/ProfileCountText"
                tools:text="25"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/ProfileCountLabelText"
                android:text="@string/profile_tv_score_label"/>
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/profile_rv_achievements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkGray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/profile_view_spacing"
        android:layout_marginRight="@dimen/profile_view_spacing"
        android:layout_marginTop="10dp"
        android:textColor="@color/darkGray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/profile_tv_recent_checkins"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/profile_rv_recent_checkins"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="3dp"/>

</LinearLayout>
